[package]
name = "lattice-fc-rpc"
version = "2.0.0-dev"
authors = ["Parity Technologies <admin@parity.io>", "Telcoin, LLC"]
edition = "2021"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
description = "Ethereum RPC (web3) compatibility layer for Substrate."
repository = "https://github.com/paritytech/frontier/"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
ethereum = { version = "0.14.0", features = ["with-codec"] }
evm = { git = "https://github.com/telcoin/evm", branch = "lattice", version = "0.36.0" }
futures = "0.3.24"
hex = "0.4.3"
log = "0.4.17"
lru = "0.8.1"
prometheus = { version = "0.13.1", default-features = false }
rand = "0.8"
tokio = { version = "1.19", features = ["sync"] }

# Parity
codec = { package = "parity-scale-codec", version = "3.2.1" }
ethereum-types = "0.14.0"
jsonrpsee = { version = "0.15.1", features = ["server", "macros"] }
libsecp256k1 = "0.7"
rlp = "0.5"

# Substrate
prometheus-endpoint = { package = "substrate-prometheus-endpoint", git = "https://github.com/telcoin/substrate", branch = "lattice" }
sc-client-api = { version = "4.0.0-dev", git = "https://github.com/telcoin/substrate", branch = "lattice" }
sc-network = { version = "0.10.0-dev", git = "https://github.com/telcoin/substrate", branch = "lattice" }
sc-network-common = { version = "0.10.0-dev", git = "https://github.com/telcoin/substrate", branch = "lattice" }
sc-rpc = { version = "4.0.0-dev", git = "https://github.com/telcoin/substrate", branch = "lattice" }
sc-service = { version = "0.10.0-dev", git = "https://github.com/telcoin/substrate", branch = "lattice" }
sc-transaction-pool = { version = "4.0.0-dev", git = "https://github.com/telcoin/substrate", branch = "lattice" }
sc-transaction-pool-api = { version = "4.0.0-dev", git = "https://github.com/telcoin/substrate", branch = "lattice" }
sp-api = { version = "4.0.0-dev", git = "https://github.com/telcoin/substrate", branch = "lattice" }
sp-block-builder = { version = "4.0.0-dev", git = "https://github.com/telcoin/substrate", branch = "lattice" }
sp-blockchain = { version = "4.0.0-dev", git = "https://github.com/telcoin/substrate", branch = "lattice" }
sp-consensus = { version = "0.10.0-dev", git = "https://github.com/telcoin/substrate", branch = "lattice" }
sp-core = { version = "6.0.0", git = "https://github.com/telcoin/substrate", branch = "lattice" }
sp-io = { version = "6.0.0", git = "https://github.com/telcoin/substrate", branch = "lattice" }
sp-runtime = { version = "6.0.0", git = "https://github.com/telcoin/substrate", branch = "lattice" }
sp-storage = { version = "6.0.0", git = "https://github.com/telcoin/substrate", branch = "lattice" }

# Frontier
fc-db = { version = "2.0.0-dev", path = "../db" }
fc-rpc-core = { version = "1.1.0-dev", path = "../rpc-core" }
fp-ethereum = { version = "1.0.0-dev", path = "../../primitives/ethereum" }
fp-evm = { version = "3.0.0-dev", path = "../../primitives/evm" }
fp-rpc = { version = "3.0.0-dev", path = "../../primitives/rpc" }
fp-storage = { version = "2.0.0-dev", path = "../../primitives/storage" }

[dev-dependencies]
tempfile = "3.3.0"
# Substrate
beefy-primitives = { version = "4.0.0-dev", git = "https://github.com/telcoin/substrate", branch = "lattice" }
sc-block-builder = { version = "0.10.0-dev", git = "https://github.com/telcoin/substrate", branch = "lattice" }
sc-client-db = { version = "0.10.0-dev", git = "https://github.com/telcoin/substrate", branch = "lattice" }
sp-consensus = { version = "0.10.0-dev", git = "https://github.com/telcoin/substrate", branch = "lattice" }
substrate-test-runtime-client = { version = "2.0.0", git = "https://github.com/telcoin/substrate", branch = "lattice" }

[features]
rpc_binary_search_estimate = []
