[package]
name = "frontier-template-node"
version = "0.0.0"
authors = ["Substrate DevHub <https://github.com/substrate-developer-hub>"]
edition = "2021"
license = "Unlicense"
build = "build.rs"
description = "A fresh FRAME-based Substrate node, ready for hacking."
publish = false

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
async-trait = "0.1"
clap = { version = "4.0", features = ["derive"] }
futures = "0.3.24"
log = "0.4.17"

# Parity
codec = { package = "parity-scale-codec", version = "3.2.1", features = ["derive"] }
jsonrpsee = { version = "0.15.1", features = ["server", "macros"] }

# Substrate
sc-basic-authorship = { version = "0.10.0-dev", git = "https://github.com/telcoin/substrate", branch = "lattice-custom-block-grant" }
sc-cli = { version = "0.10.0-dev", git = "https://github.com/telcoin/substrate", branch = "lattice-custom-block-grant", features = ["wasmtime"] }
sc-client-api = { version = "4.0.0-dev", git = "https://github.com/telcoin/substrate", branch = "lattice-custom-block-grant" }
sc-consensus = { version = "0.10.0-dev", git = "https://github.com/telcoin/substrate", branch = "lattice-custom-block-grant" }
sc-consensus-aura = { version = "0.10.0-dev", git = "https://github.com/telcoin/substrate", branch = "lattice-custom-block-grant", optional = true }
sc-consensus-manual-seal = { version = "0.10.0-dev", git = "https://github.com/telcoin/substrate", branch = "lattice-custom-block-grant", optional = true }
sc-executor = { version = "0.10.0-dev", git = "https://github.com/telcoin/substrate", branch = "lattice-custom-block-grant", features = ["wasmtime"] }
sc-finality-grandpa = { version = "0.10.0-dev", git = "https://github.com/telcoin/substrate", branch = "lattice-custom-block-grant" }
sc-keystore = { version = "4.0.0-dev", git = "https://github.com/telcoin/substrate", branch = "lattice-custom-block-grant" }
sc-network = { version = "0.10.0-dev", git = "https://github.com/telcoin/substrate", branch = "lattice-custom-block-grant" }
sc-rpc = { version = "4.0.0-dev", git = "https://github.com/telcoin/substrate", branch = "lattice-custom-block-grant" }
sc-rpc-api = { version = "0.10.0-dev", git = "https://github.com/telcoin/substrate", branch = "lattice-custom-block-grant" }
sc-service = { version = "0.10.0-dev", git = "https://github.com/telcoin/substrate", branch = "lattice-custom-block-grant", features = ["wasmtime"] }
sc-telemetry = { version = "4.0.0-dev", git = "https://github.com/telcoin/substrate", branch = "lattice-custom-block-grant" }
sc-transaction-pool = { version = "4.0.0-dev", git = "https://github.com/telcoin/substrate", branch = "lattice-custom-block-grant" }
sc-transaction-pool-api = { version = "4.0.0-dev", git = "https://github.com/telcoin/substrate", branch = "lattice-custom-block-grant" }
sp-api = { version = "4.0.0-dev", git = "https://github.com/telcoin/substrate", branch = "lattice-custom-block-grant" }
sp-block-builder = { version = "4.0.0-dev", git = "https://github.com/telcoin/substrate", branch = "lattice-custom-block-grant" }
sp-blockchain = { version = "4.0.0-dev", git = "https://github.com/telcoin/substrate", branch = "lattice-custom-block-grant" }
sp-consensus-aura = { version = "0.10.0-dev", git = "https://github.com/telcoin/substrate", branch = "lattice-custom-block-grant" }
sp-core = { version = "6.0.0", git = "https://github.com/telcoin/substrate", branch = "lattice-custom-block-grant" }
sp-finality-grandpa = { version = "4.0.0-dev", git = "https://github.com/telcoin/substrate", branch = "lattice-custom-block-grant" }
sp-inherents = { version = "4.0.0-dev", git = "https://github.com/telcoin/substrate", branch = "lattice-custom-block-grant" }
sp-keyring = { version = "6.0.0", git = "https://github.com/telcoin/substrate", branch = "lattice-custom-block-grant" }
sp-runtime = { version = "6.0.0", git = "https://github.com/telcoin/substrate", branch = "lattice-custom-block-grant" }
sp-timestamp = { version = "4.0.0-dev", git = "https://github.com/telcoin/substrate", branch = "lattice-custom-block-grant" }
# These dependencies are used for RPC
pallet-transaction-payment-rpc = { version = "4.0.0-dev", git = "https://github.com/telcoin/substrate", branch = "lattice-custom-block-grant" }
substrate-frame-rpc-system = { version = "4.0.0-dev", git = "https://github.com/telcoin/substrate", branch = "lattice-custom-block-grant" }
# These dependencies are used for runtime benchmarking
frame-benchmarking = { version = "4.0.0-dev", git = "https://github.com/telcoin/substrate", branch = "lattice-custom-block-grant", optional = true }
frame-benchmarking-cli = { version = "4.0.0-dev", git = "https://github.com/telcoin/substrate", branch = "lattice-custom-block-grant", optional = true }
frame-system = { version = "4.0.0-dev", git = "https://github.com/telcoin/substrate", branch = "lattice-custom-block-grant" }
pallet-transaction-payment = { version = "4.0.0-dev", git = "https://github.com/telcoin/substrate", branch = "lattice-custom-block-grant" }

# Frontier
fc-cli = { path = "../../client/cli" }
fc-consensus = { path = "../../client/consensus" }
fc-db = { path = "../../client/db" }
fc-mapping-sync = { path = "../../client/mapping-sync" }
lattice-fc-rpc = { path = "../../client/lattice-rpc" }
fc-rpc-core = { path = "../../client/rpc-core" }
fp-consensus = { path = "../../primitives/consensus" }
fp-dynamic-fee = { path = "../../primitives/dynamic-fee" }
fp-evm = { path = "../../primitives/evm" }
fp-rpc = { path = "../../primitives/rpc" }
fp-storage = { path = "../../primitives/storage" }

frontier-template-runtime = { path = "../runtime", default-features = false, features = ["std"] }

[build-dependencies]
substrate-build-script-utils = { version = "3.0.0", git = "https://github.com/telcoin/substrate", branch = "lattice-custom-block-grant" }

[features]
default = ["aura", "with-rocksdb-weights"]
aura = [
	"sc-consensus-aura",
	"frontier-template-runtime/aura",
]
manual-seal = [
	"sc-consensus-manual-seal",
	"frontier-template-runtime/manual-seal",
]
with-rocksdb-weights = ["frontier-template-runtime/with-rocksdb-weights"]
with-paritydb-weights = ["frontier-template-runtime/with-paritydb-weights"]
rpc_binary_search_estimate = ["lattice-fc-rpc/rpc_binary_search_estimate"]
runtime-benchmarks = [
	"frame-benchmarking",
	"frame-benchmarking-cli",
	"sc-service/runtime-benchmarks",
	"frontier-template-runtime/runtime-benchmarks",
]
